[gd_scene load_steps=10 format=3 uid="uid://cxmc0dkwf14tl"]

[ext_resource type="Script" path="res://scenes/UI/end_screen.gd" id="1_4os64"]
[ext_resource type="AudioStream" uid="uid://b4sdckv6dc8ye" path="res://assets/audio/jingles_PIZZI10.ogg" id="2_10xoo"]
[ext_resource type="PackedScene" uid="uid://b3i30v1fe3ih3" path="res://scenes/UI/sound_button.tscn" id="2_swnq1"]
[ext_resource type="AudioStream" uid="uid://wacthcotfk0h" path="res://assets/audio/jingles_PIZZI07.ogg" id="3_58ryt"]
[ext_resource type="PackedScene" uid="uid://dwlllofvrxo0r" path="res://scenes/UI/stats_card.tscn" id="6_kau2j"]

[sub_resource type="Animation" id="Animation_3umoo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_valo5"]
resource_name = "in"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i8uaf"]
resource_name = "out"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7503e"]
_data = {
"RESET": SubResource("Animation_3umoo"),
"in": SubResource("Animation_valo5"),
"out": SubResource("Animation_i8uaf")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4os64")

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_10xoo")
volume_db = -8.0
bus = &"sfx"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_58ryt")
volume_db = -8.0
bus = &"sfx"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.458824)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_7503e")
}
autoplay = "in"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 640.0
offset_bottom = 360.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(215, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 16
text = "You won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_swnq1")]
unique_name_in_owner = true
layout_mode = 2
text = "Go to upgrades"

[node name="QuitButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_swnq1")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"

[node name="StatsCard" parent="HBoxContainer" instance=ExtResource("6_kau2j")]
unique_name_in_owner = true
layout_mode = 2
